// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaPlayer Calls the canonical placeholder when platform is canonical and showPlaceholder is true 1`] = `
.c10 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c0 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c12 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c8 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c6:hover,
.c6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c9 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c11 {
  display: block;
  margin-top: 0.5rem;
}

.c4 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: rgba(34,34,34,0.75);
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

.c5 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c7 {
  position: absolute;
  bottom: 0;
}

.c2:hover .c7,
.c2:focus .c7 {
  background-color: #B80000;
}

.c1 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c4 {
    background-color: transparent;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c5 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .c5 {
    padding: 1rem;
  }
}

<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB"}
    </script>
  </head>
  <body>
    <div>
      <figure
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2 c3"
          >
            <div
              class="c4"
            >
              <strong
                aria-hidden="true"
                class="c5"
              >
                Contains strong language and adult humour.
              </strong>
            </div>
            <button
              class="c6 c7"
            >
              <span
                class="c8"
              >
                Contains strong language and adult humour. Play video, "Five things ants can teach us about management", Duration 3,11
              </span>
              <div
                aria-hidden="true"
                class="c9"
              >
                <svg
                  class="c10"
                  focusable="false"
                  height="12px"
                  viewBox="0 0 32 32"
                  width="12px"
                >
                  <polygon
                    points="3,32 29,16 3,0"
                  />
                </svg>
              </div>
              <time
                aria-hidden="true"
                class="c11"
                datetime="PT3M11S"
              >
                03:11
              </time>
            </button>
            <img
              alt=""
              class="c12"
              src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
              srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
            />
          </div>
        </div>
      </figure>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Does not Call the canonical placeholder when platform is canonical but showPlaceholder is false 1`] = `
.c0 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c1 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c2 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  border: 0;
  overflow: hidden;
}

<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB"}
    </script>
  </head>
  <body>
    <div>
      <figure
        class="c0"
      >
        <div
          class="c1"
        >
          <iframe
            allow="autoplay; fullscreen"
            allowfullscreen=""
            class="c2"
            scrolling="no"
            src="https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB"
            title="Media player"
          />
        </div>
      </figure>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the AMP player when platform is AMP 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB/amp"}
    </script>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c0 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c1 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

<div>
      <figure
        class="c0"
      >
        <div
          class="c1"
        >
          <amp-iframe
            allowfullscreen="allowfullscreen"
            frameborder="0"
            layout="fill"
            sandbox="allow-scripts allow-same-origin"
            scrolling="no"
            src="https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB/amp"
            title="Media player"
          >
            <amp-img
              alt=""
              attribution=""
              height="16"
              layout="fill"
              placeholder="true"
              src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
              srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
              width="9"
            />
          </amp-iframe>
        </div>
      </figure>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the AMP player with a caption 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB"}
    </script>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB/amp"}
    </script>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    .c0 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c3 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c1 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c2 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  color: #6E6E73;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c2 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c2 > p:last-child {
  padding-bottom: 0;
}

.c2 i {
  font-style: normal;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c2 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c2 {
    padding: 0.5rem 0 0;
  }
}

<div>
      <figure
        class="c0"
      >
        <div
          class="c1"
        >
          <amp-iframe
            allowfullscreen="allowfullscreen"
            frameborder="0"
            layout="fill"
            sandbox="allow-scripts allow-same-origin"
            scrolling="no"
            src="https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB/amp"
            title="Media player"
          >
            <amp-img
              alt=""
              attribution=""
              height="16"
              layout="fill"
              placeholder="true"
              src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
              srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
              width="9"
            />
          </amp-iframe>
        </div>
        <figcaption
          class="c2"
        >
          <span
            class="c3"
          >
            Video caption, 
          </span>
          <p>
            Media Player With Caption
          </p>
        </figcaption>
      </figure>
    </div>
  </body>
</html>
`;

exports[`MediaPlayer Renders the canonical player with a caption 1`] = `
<html>
  <head>
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"VideoObject","name":"Five things ants can teach us about management","description":"They may be tiny, but us humans could learn a thing or two from ants.","duration":"PT3M11S","thumbnailUrl":"https://ichef.test.bbci.co.uk/images/ic/1024x576/p01k6mtv.jpg","uploadDate":"2018-10-22T14:35:32.000Z","embedURL":"https://embed-host.bbc.com/ws/av-embeds/articles/c123456789o/p01k6msp/en-GB"}
    </script>
  </head>
  <body>
    .c10 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c0 {
  margin: 0;
  padding-bottom: 1.5rem;
  width: 100%;
}

.c12 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c8 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c6 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c6:hover,
.c6:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c9 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c11 {
  display: block;
  margin-top: 0.5rem;
}

.c4 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: rgba(34,34,34,0.75);
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
}

.c5 {
  display: block;
  font-weight: normal;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c7 {
  position: absolute;
  bottom: 0;
}

.c2:hover .c7,
.c2:focus .c7 {
  background-color: #B80000;
}

.c1 {
  padding-top: 56.25%;
  position: relative;
  overflow: hidden;
}

.c13 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: italic;
  color: #6E6E73;
  padding: 0.5rem 0.5rem 0;
  width: 100%;
}

.c13 > p {
  padding-bottom: 1.5rem;
  margin: 0;
}

.c13 > p:last-child {
  padding-bottom: 0;
}

.c13 i {
  font-style: normal;
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c4 {
    background-color: transparent;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c5 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .c5 {
    padding: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c13 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c13 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:25rem) and (max-width:62.9375rem) {
  .c13 {
    padding: 0.5rem 1rem 0;
  }
}

@media (min-width:63rem) {
  .c13 {
    padding: 0.5rem 0 0;
  }
}

<div>
      <figure
        class="c0"
      >
        <div
          class="c1"
        >
          <div
            class="c2 c3"
          >
            <div
              class="c4"
            >
              <strong
                aria-hidden="true"
                class="c5"
              >
                Contains strong language and adult humour.
              </strong>
            </div>
            <button
              class="c6 c7"
            >
              <span
                class="c8"
              >
                Contains strong language and adult humour. Play video, "Five things ants can teach us about management", Duration 3,11
              </span>
              <div
                aria-hidden="true"
                class="c9"
              >
                <svg
                  class="c10"
                  focusable="false"
                  height="12px"
                  viewBox="0 0 32 32"
                  width="12px"
                >
                  <polygon
                    points="3,32 29,16 3,0"
                  />
                </svg>
              </div>
              <time
                aria-hidden="true"
                class="c11"
                datetime="PT3M11S"
              >
                03:11
              </time>
            </button>
            <img
              alt=""
              class="c12"
              src="https://ichef.test.bbci.co.uk/images/ic/512xn/p01k6mtv.jpg"
              srcset="https://ichef.test.bbci.co.uk/images/ic/240xn/p01k6mtv.jpg 240w, https://ichef.test.bbci.co.uk/images/ic/320xn/p01k6mtv.jpg 320w, https://ichef.test.bbci.co.uk/images/ic/480xn/p01k6mtv.jpg 480w, https://ichef.test.bbci.co.uk/images/ic/624xn/p01k6mtv.jpg 624w, https://ichef.test.bbci.co.uk/images/ic/800xn/p01k6mtv.jpg 800w"
            />
          </div>
        </div>
        <figcaption
          class="c13"
        >
          <span
            class="c8"
          >
            Video caption, 
          </span>
          <p>
            Media Player With Caption
          </p>
        </figcaption>
      </figure>
    </div>
  </body>
</html>
`;
